[package]
name = "lagret"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1.10.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.143"
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }

