[package]
name = "lagret"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = { version = "1.8.5", features = [ "behavior-version-latest" ] }
aws-sdk-s3 = "1.103.0"
axum =  { version = "0.8", features = [ "macros" ] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.46", features = [ "derive" ] }
semver = { version = "1", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha256 = "1.6.0"
thiserror = "2.0.16"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "sync" ] }

